Removed lengthy output

--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# Setup\n",
         "\n",
-        "See [README](README.md) from instructions"
+        "See [README](README.md) from instructions."
       ]
     },
     {
