Brought in Blog post comments

--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/datakind/hxl-metadata-prediction/blob/main/generate-test-train-data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "DUIEgLN7Aizy"
       },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,12 +265,17 @@
         "\n",
         "## Download HXL crawler data\n",
         "\n",
+        "Many datasets on HDX are created by automatic pipelines. Additionally, organizations will use the same columns and HXL tags for multiple tabular datasets, for example in uploading data for different countries. To avoid polluting the test set with very similar data as found in the training set, we cannot just sample to create a train/test split.\n",
+        "Luckily the HDX team have created an MD5 hash for every combination of column names, which we can use to exclude repeat datasets.\n",
+        "\n",
+        "First, we load the HXL crawler data …\n",
+        "\n",
         "This data was generated using the [HDX Hashtag Crawler](https://github.com/dividor/hdx-hashtag-crawler) over several days and saved to Google drive."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -322,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -740,12 +745,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "xmwU9aCiAizz",
-        "outputId": "c7bf235a-e659-41e9-d696-43ec9d27aa81"
+        "id": "xmwU9aCiAizz"
       },
       "outputs": [],
       "source": [
@@ -754,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1258,8 +1258,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note how a data provider will often contribute multiple resource ids (CSV and Excel tables), all with the same column names. There isn't much benefit in including this repeat data in the model fine-tuning training, but we do want one representative example for each column combination (hash) …"
+      ],
+      "metadata": {
+        "id": "_nJOt0NiV8i6"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1290,12 +1299,12 @@
       "source": [
         "# Extract a single resource_id for each hash\n",
         "resource_ids = hash_resources[\"Unique HDX resource id\"].apply(lambda x: x[0])\n",
-        "print(resource_ids)"
+        "print(resource_ids[0:5])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1332,6 +1341,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "This has reduced our data significantly, but in doing so we have indirectly performed some balancing."
+      ],
+      "metadata": {
+        "id": "T7LtL-IMWFhY"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "vJkW8wyML2OI"
       },
@@ -1343,7 +1361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1943,8 +1961,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "That's a pretty big drop, indicating that it's challenging for humans to use all the correct tags and attributes when they tag columns.\n",
+        "\n",
+        "Spot checking a few …\n"
+      ],
+      "metadata": {
+        "id": "g2oNW2WRWLbq"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2083,18 +2112,31 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Comparing against the [HXL Core Schema](https://data.humdata.org/dataset/hxl-core-schemas), we do in fact see that each has at least one tag or attribute which isn't in the schema list.\n",
+        "\n",
+        "It might seem a bit aggressive to remove all instances even if one attribute is incorrect, and future work might relax this a bit, but for now to keep things as clean as possible we'll only use data with fully supported tags and attributes.\n"
+      ],
+      "metadata": {
+        "id": "55eU_XuIWRZu"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "EvcvYCfbAizz"
       },
       "source": [
         "## Download data excerpts\n",
         "\n",
-        "Using our subset of resource_ids for each hash, extract column data excerpts."
+        "As a (part-time!) human, to set the right tags and attributes on a column in a table I like to see an example of the data in that columns. As shown in my previous blog post, LLMs are the same and perform better if the prompt contains a sneak peek of the data.\n",
+        "\n",
+        "To get the data excerpts for each column, we can use the HDX Python API along with libhxl. The code below isn't very elegant, future work might add the excerpt extraction to the HXL data crawler perhaps, but it will download tabular datasets and load them to extract data excerpts …"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4566,12 +4608,14 @@
         "id": "3HFnUUNxWgAG"
       },
       "source": [
-        "## Data cleaning"
+        "## Data cleaning\n",
+        "\n",
+        "Let's remove rows where Data excerpts weren't found. This may be due to blank tables, processing errors and more."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4606,7 +4650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4685,7 +4729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6496,12 +6540,18 @@
       "source": [
         "## Train/Test split\n",
         "\n",
-        "In this section we will create train and test datasets for fine tuning."
+        "We have already removed a lot of duplication in our training data due to automated pipelines uploading data to HDX, next we need to split the data into train and test for model fine-tuning. Doing this with a random sample isn't a great idea because the same data provider organizations would occur in both.\n",
+        "\n",
+        "Most organizations are consistent in how the apply HXL tags, so having the same organization in test as in training might yield unrealistically accurate results. Therefore, we will split by data providers so that the test set only has data from providers that are not in the training data.\n",
+        "\n",
+        "Additionally, data provider organizations can be subsidiaries of a larger organization, for example \"ocha-iraq\" and \"ocha-libya\". It may be the case that different subsidiaries are consistent in how they tag data, so mixing data from different subsidiaries in train and test might yield unrealistically accurate results. We will therefore remove any potential subsidiaries based on organization name prefix from the test data, simulating the case of a brand-new organization will be predicting HXL tags on its data.\n",
+        "\n",
+        "We will also remove certain data providers from the test set because their type of data is too similar and so we would be testing the technique on predicting things (e.g. 'ourairports'), or they are part of a UN organization that will be adept of setting HXL tags and so great as training data (e.g. 'hdx', 'un-ocha')."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7193,7 +7243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9521,12 +9571,40 @@
         "id": "OEPubksEAiz1"
       },
       "source": [
-        "### Create LLM fine-tuning prompt files"
+        "### Create LLM fine-tuning prompt files\n",
+        "\n",
+        "Now we have train/test datasets, we will use them to create two JSONL prompt files that can be used for fine-tuning. In my original article we opted for using a completion model, but with the release of GPT-4o we will instead generate prompts appropriate for fine-tuning a chat model (see here for more information about the available models).\n",
+        "\n",
+        "Each prompt is something like this …\n",
+        "\n",
+        "```\n",
+        "{\n",
+        "  \"messages\": [\n",
+        "    {\n",
+        "      \"role\": \"system\",\n",
+        "      \"content\": \"<SYSTEM PROMPT>\"\n",
+        "    },\n",
+        "    {\n",
+        "      \"role\": \"user\",\n",
+        "      \"content\": \"<INPUT PROMPT>\"\n",
+        "    },\n",
+        "    {\n",
+        "      \"role\": \"assistant\",\n",
+        "      \"content\": \"<EXPECTED OUTPUT>\"\n",
+        "    }\n",
+        "  ]\n",
+        "}\n",
+        "\n",
+        "```\n",
+        "\n",
+        "Note: The above has been formatted for clarity, but JSONL will have everything in one line of the prompt file.\n",
+        "\n",
+        "Using the data excerpts, table description, column name we collated, we can now generate prompts which look like this …"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9697,7 +9775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9756,9 +9834,9 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "hxl-prediction",
