--- a/generate-test-train-data.ipynb
+++ b/generate-test-train-data.ipynb
@@ -4724,7 +4724,7 @@
       },
       "source": [
         "## Generate Data table descriptions using LLM\n",
-        "Though there are descriptions on HDX for datasets, there aren't always detailed descriptions for tables in CSV and Excel files. We will generate these using GPT-3.5-Turbo to include in the prompt as they provide valuable context when considering what HXL tags apply to a column"
+        "Though there are descriptions on HDX for datasets, there aren't always detailed descriptions for tables in CSV and Excel files. We will generate these using GPT-3.5-Turbo to include in the prompt as they provide valuable context when considering what HXL tags apply to a column.\n"
       ]
     },
     {
@@ -6463,7 +6463,10 @@
         "            \"role\": \"system\",\n",
         "            \"content\": \"You are a helpful assistant Summarizing data into one paragraph\",\n",
         "        },\n",
-        "        {\"role\": \"user\", \"content\": prompt},\n",
+        "        {\n",
+        "            \"role\": \"user\",\n",
+        "            \"content\": prompt\n",
+        "        },\n",
         "    ]\n",
         "\n",
         "    # Request a completion (description) from the OpenAI API\n",
