More doc strings

--- a/openai-hxl-prediction.ipynb
+++ b/openai-hxl-prediction.ipynb
@@ -1041,6 +1041,15 @@
         "    return results\n",
         "\n",
         "def filter_for_schema(text):\n",
+        "    \"\"\"\n",
+        "    Filters the input text to extract approved HXL schema tokens.\n",
+        "\n",
+        "    Args:\n",
+        "        text (str): The input text to be filtered.\n",
+        "\n",
+        "    Returns:\n",
+        "        str: The filtered text containing only approved HXL schema tokens.\n",
+        "    \"\"\"\n",
         "\n",
         "    if \" \" in text:\n",
         "        text = text.replace(\" \",\"\")\n",
@@ -2065,8 +2074,8 @@
         "    X_test = [json.loads(line) for line in f]\n",
         "\n",
         "# Subsample\n",
-        "#size = 10\n",
-        "#X_test = X_test[-size:]\n",
+        "# size = 10\n",
+        "# X_test = X_test[-size:]\n",
         "\n",
         "results = make_chat_predictions(X_test, model)\n",
         "\n",
@@ -5901,6 +5910,24 @@
         "X_test2 = pd.read_excel(f\"{LOCAL_DATA_DIR}/hxl-metadata-fine-tune-prediction-results-review.xlsx\", sheet_name=0)\n",
         "\n",
         "def make_chat_predictions(prompts, model, temperature=0.1, max_tokens=13, actual_field=\"actual\"):\n",
+        "  \"\"\"\n",
+        "  Generate chat predictions based on prompts using the OpenAI chat model.\n",
+        "\n",
+        "  Args:\n",
+        "    prompts (pandas.DataFrame): A DataFrame containing the prompts for prediction.\n",
+        "    model (str): The name or ID of the OpenAI chat model to use.\n",
+        "    temperature (float, optional): The temperature parameter for controlling the randomness of the predictions. \n",
+        "      Higher values (e.g., 1.0) make the output more random, while lower values (e.g., 0.1) make it more deterministic.\n",
+        "      Defaults to 0.1.\n",
+        "    max_tokens (int, optional): The maximum number of tokens in the predicted response. Defaults to 13.\n",
+        "    actual_field (str, optional): The name of the column in the prompts DataFrame that contains the actual values.\n",
+        "      Defaults to \"actual\".\n",
+        "\n",
+        "  Returns:\n",
+        "    pandas.DataFrame: A DataFrame containing the results of the chat predictions, including the prompts, actual values,\n",
+        "    and predicted values.\n",
+        "\n",
+        "  \"\"\"\n",
         "  results = []\n",
         "  for index, row in prompts.iterrows():\n",
         "    prompt = row[\"prompt\"]\n",
@@ -5908,18 +5935,18 @@
         "\n",
         "    actual = row[actual_field]\n",
         "    completion = client.chat.completions.create(\n",
-        "        model=model,\n",
-        "        messages=prompt,\n",
-        "        temperature=temperature,\n",
-        "        max_tokens=max_tokens\n",
+        "      model=model,\n",
+        "      messages=prompt,\n",
+        "      temperature=temperature,\n",
+        "      max_tokens=max_tokens\n",
         "    )\n",
         "    predicted = completion.choices[0].message.content\n",
         "    predicted = filter_for_schema(predicted)\n",
         "\n",
         "    res = {\n",
-        "        \"prompt\": prompt,\n",
-        "        \"actual\": actual,\n",
-        "        \"predicted\": predicted\n",
+        "      \"prompt\": prompt,\n",
+        "      \"actual\": actual,\n",
+        "      \"predicted\": predicted\n",
         "    }\n",
         "\n",
         "    print(f\"Predicted: {predicted}; Actual: {actual}\")\n",
@@ -6487,6 +6514,16 @@
       ],
       "source": [
         "def generate_hxl_standard_prompt(local_data_file):\n",
+        "  \"\"\"\n",
+        "  Generate a standard prompt for predicting Humanitarian Markup Language (HXL) tags and attributes.\n",
+        "\n",
+        "  Args:\n",
+        "    local_data_file (str): The path to the local data file containing core hashtags and attributes.\n",
+        "\n",
+        "  Returns:\n",
+        "    str: The generated HXL standard prompt\n",
+        "\n",
+        "  \"\"\"\n",
         "\n",
         "  core_hashtags = pd.read_excel(local_data_file, sheet_name='Core hashtags')\n",
         "  core_hashtags = core_hashtags.loc[core_hashtags[\"Release status\"] == \"Released\"]\n",
@@ -6622,6 +6659,20 @@
       ],
       "source": [
         "def call_gpt(prompt, system_prompt, model, temperature, top_p, max_tokens):\n",
+        "    \"\"\"\n",
+        "    Calls the GPT model to generate a response based on the given prompt and system prompt.\n",
+        "\n",
+        "    Args:\n",
+        "        prompt (str): The user's input prompt.\n",
+        "        system_prompt (str): The system's input prompt.\n",
+        "        model (str): The name or ID of the GPT model to use.\n",
+        "        temperature (float): Controls the randomness of the generated output. Higher values (e.g., 0.8) make the output more random, while lower values (e.g., 0.2) make it more deterministic.\n",
+        "        top_p (float): Controls the diversity of the generated output. Higher values (e.g., 0.8) make the output more diverse, while lower values (e.g., 0.2) make it more focused.\n",
+        "        max_tokens (int): The maximum number of tokens to generate in the response.\n",
+        "\n",
+        "    Returns:\n",
+        "        dict or None: The generated response as a dictionary object, or None if an error occurred during generation.\n",
+        "    \"\"\"\n",
         "    response = client.chat.completions.create(\n",
         "        model=model,\n",
         "        messages= [\n",
@@ -6650,51 +6701,67 @@
         "\n",
         "def make_prompt_predictions(prompts, model, temperature=0.1, top_p=0.1, \\\n",
         "                            max_tokens=2000, debug=False, actual_field=\"actual\"):\n",
+        "    \"\"\"\n",
+        "    Generate predictions for a given set of prompts using the specified model.\n",
         "\n",
-        "  num_prompts = len(prompts)\n",
-        "  print(f\"Number of prompts: {num_prompts}\")\n",
+        "    Args:\n",
+        "        prompts (pandas.DataFrame): A DataFrame containing the prompts to generate predictions for.\n",
+        "        model (str): The name of the model to use for prediction.\n",
+        "        temperature (float, optional): The temperature parameter for the model's sampling. Defaults to 0.1.\n",
+        "        top_p (float, optional): The top-p parameter for the model's sampling. Defaults to 0.1.\n",
+        "        max_tokens (int, optional): The maximum number of tokens to generate for each prompt. Defaults to 2000.\n",
+        "        debug (bool, optional): Whether to print debug information during prediction. Defaults to False.\n",
+        "        actual_field (str, optional): The name of the column in the prompts DataFrame that contains the actual values. Defaults to \"actual\".\n",
         "\n",
-        "  results = []\n",
-        "  for index, p in prompts.iterrows():\n",
+        "    Returns:\n",
+        "        pandas.DataFrame: A DataFrame containing the results of the predictions, including the prompt, actual value, predicted value, and reasoning.\n",
         "\n",
-        "      if index % 50 == 0:\n",
-        "          print(f\"{index/num_prompts*100:.2f}% complete\")\n",
+        "    \"\"\"\n",
         "\n",
-        "      prompt = p[\"prompt\"]\n",
-        "      prompt = ast.literal_eval(prompt)\n",
-        "      prompt = prompt[1][\"content\"]\n",
-        "      actual = p[actual_field]\n",
+        "    num_prompts = len(prompts)\n",
+        "    print(f\"Number of prompts: {num_prompts}\")\n",
         "\n",
-        "      result = call_gpt(prompt, hxl_prompt, model, temperature, top_p, max_tokens)\n",
+        "    results = []\n",
+        "    for index, p in prompts.iterrows():\n",
         "\n",
-        "      if result is None:\n",
-        "          print(\"    !!!!! No LLM result\")\n",
-        "          predicted = \"\"\n",
-        "          reasoning = \"\"\n",
-        "      else:\n",
-        "          predicted = result[\"predicted\"]\n",
-        "          reasoning = result[\"reasoning\"]\n",
+        "        if index % 50 == 0:\n",
+        "            print(f\"{index/num_prompts*100:.2f}% complete\")\n",
         "\n",
-        "      if debug is True:\n",
-        "        print(f\"Actual: {actual}; Predicted: {predicted}; Reasoning: {reasoning}\")\n",
+        "        prompt = p[\"prompt\"]\n",
+        "        prompt = ast.literal_eval(prompt)\n",
+        "        prompt = prompt[1][\"content\"]\n",
+        "        actual = p[actual_field]\n",
         "\n",
-        "      results.append({\n",
-        "          \"prompt\": prompt,\n",
-        "          \"actual\": actual,\n",
-        "          \"predicted\": predicted,\n",
-        "          \"reasoning\": reasoning\n",
-        "      })\n",
+        "        result = call_gpt(prompt, hxl_prompt, model, temperature, top_p, max_tokens)\n",
         "\n",
-        "  results = pd.DataFrame(results)\n",
+        "        if result is None:\n",
+        "            print(\"    !!!!! No LLM result\")\n",
+        "            predicted = \"\"\n",
+        "            reasoning = \"\"\n",
+        "        else:\n",
+        "            predicted = result[\"predicted\"]\n",
+        "            reasoning = result[\"reasoning\"]\n",
         "\n",
-        "  print(f\"\\n\\n===================== {model} Results =========================\\n\\n\")\n",
-        "  output_prediction_metrics(results)\n",
-        "  print(f\"\\n\\n=================================================================\")\n",
+        "        if debug is True:\n",
+        "            print(f\"Actual: {actual}; Predicted: {predicted}; Reasoning: {reasoning}\")\n",
         "\n",
-        "  results[\"match\"] = results['predicted'] == results['actual']\n",
-        "  results.to_excel(f\"{LOCAL_DATA_DIR}/hxl-metadata-prompting-only-prediction-{model}-results.xlsx\", index=False)\n",
+        "        results.append({\n",
+        "            \"prompt\": prompt,\n",
+        "            \"actual\": actual,\n",
+        "            \"predicted\": predicted,\n",
+        "            \"reasoning\": reasoning\n",
+        "        })\n",
         "\n",
-        "  return results\n",
+        "    results = pd.DataFrame(results)\n",
+        "\n",
+        "    print(f\"\\n\\n===================== {model} Results =========================\\n\\n\")\n",
+        "    output_prediction_metrics(results)\n",
+        "    print(f\"\\n\\n=================================================================\")\n",
+        "\n",
+        "    results[\"match\"] = results['predicted'] == results['actual']\n",
+        "    results.to_excel(f\"{LOCAL_DATA_DIR}/hxl-metadata-prompting-only-prediction-{model}-results.xlsx\", index=False)\n",
+        "\n",
+        "    return results\n",
         "\n",
         "for model in [\"gpt-4o-mini\",\"gpt-4o\"]:\n",
         "  print(f\"Model: {model}\")\n",
