Added ability to use GPT-4o mini in class

--- a/openai-hxl-prediction.ipynb
+++ b/openai-hxl-prediction.ipynb
@@ -10465,10 +10465,10 @@
       "execution_count": 40,
       "metadata": {
         "id": "4f75zwK0kmK-",
-        "outputId": "6601e12a-c731-442f-ab86-e1e3d44ad14c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6601e12a-c731-442f-ab86-e1e3d44ad14c"
       },
       "outputs": [
         {
@@ -12511,12 +12511,12 @@
         "display(data)"
       ],
       "metadata": {
-        "id": "QORlfOGKAJ8i",
-        "outputId": "7a0a4ba6-d770-413e-9dba-14214b3cc182",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "QORlfOGKAJ8i",
+        "outputId": "7a0a4ba6-d770-413e-9dba-14214b3cc182"
       },
       "execution_count": 48,
       "outputs": [
@@ -13680,6 +13680,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
