Use US spelling! :)

--- a/openai-hxl-prediction.ipynb
+++ b/openai-hxl-prediction.ipynb
@@ -2550,7 +2550,7 @@
         "id": "_kQ9LpyE_eGt"
       },
       "source": [
-        "#### Scenario 1 - Predicting 'adm1' human labelled region\n",
+        "#### Scenario 1 - Predicting 'adm1' human labeled region\n",
         "\n"
       ]
     },
@@ -3138,7 +3138,7 @@
         "id": "p-npWgiAZvie"
       },
       "source": [
-        "The columns in these cases are called 'Region' so using '#region' as the tag seems perfectly reasonable. However, for some countries region is in fact the administrative level 1. Looking at the two examples above, \"Ruyigi\", \"Muyinga\" and \"Makamba\" are in fact administrative level 1, same applies for the other 'incorrect' predictions in this category. Basically, both the human-labelled data and the different LLM prediction are correct.\n",
+        "The columns in these cases are called 'Region' so using '#region' as the tag seems perfectly reasonable. However, for some countries region is in fact the administrative level 1. Looking at the two examples above, \"Ruyigi\", \"Muyinga\" and \"Makamba\" are in fact administrative level 1, same applies for the other 'incorrect' predictions in this category. Basically, both the human-labeled data and the different LLM prediction are correct.\n",
         "What's interesting here is that 'adm1' is perhaps a more consistent classification as it is more commonly used in linking datasets."
       ]
     },
@@ -4951,7 +4951,7 @@
       "source": [
         "The above is a very quick review, no doubt these figures could be refined, but there are two takeaways:\n",
         "\n",
-        "- The human labelled data is not always correct, and so might not always be good for traning and testing\n",
+        "- The human labeled data is not always correct, and so might not always be good for traning and testing\n",
         "- Though the LLM prediction is not perfect, given the high-cardinality of tags + attributes, performance is actually acceptable."
       ]
     },
@@ -4961,7 +4961,7 @@
         "id": "p9r2D_IzHuJL"
       },
       "source": [
-        "## Correcting the test data for mislabelled HXL and re-running predictions\n",
+        "## Correcting the test data for mislabeled HXL and re-running predictions\n",
         "\n",
         "Given the above analysis, we should correct the test data and run the prediction again. This was done manually in the [human reviewed](https://docs.google.com/spreadsheets/d/1QhRJX-Z4m3DHG9UoSKn5RbAS6Mz2v-11JxfvLI0CYK8/edit?usp=sharing) sheet.\n"
       ]
@@ -6809,7 +6809,7 @@
         "\n",
         "*How does prompting-only compare with the fine-tuned model?*  \n",
         "\n",
-        "GPT-4o gave the best results of all models, with 86% accuracy on tags and 71% on tags and attributes. In fact, the performance could well be better with more analysis of the test data to correct incorrect human-labelled tags, but that would be for future work.\n",
+        "GPT-4o gave the best results of all models, with 86% accuracy on tags and 71% on tags and attributes. In fact, the performance could well be better with more analysis of the test data to correct incorrect human-labeled tags, but that would be for future work.\n",
         "\n",
         "\n",
         "Let's take a close look at the latter. Let's take a closer look at the latter ..."
